--- a/eli-gram/src/Components/SearchBar/SearchBar.css
+++ b/eli-gram/src/Components/SearchBar/SearchBar.css
@@ -1,17 +1,34 @@
 .search-bar-wrapper {
-  border-bottom: 1px solid #3333;
-  height: 80px;
-  line-height: 70px;
+  border-bottom: 3px solid #3333;
+  height: 100px;
+  line-height: 100px;
   display: flex;
   justify-content: space-between;
   background: #ffffff;
 }
 
 .image-wrapper {
-  height: 50px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+border: 1px solid blue;
 }
 .instaIcon{
+  width: 40px;
+   height: 40px;
   margin-right: 15px;
+  padding-right: 15px;
+  border-right: 2px solid #3333;
+}
+
+.instaCursive{
+  height: 75%;
+
+
+}
+.searchBarStyling{
+  width: 200px;
+  border: 1px solid red;
 }
 
 .logo-image {
@@ -19,10 +36,15 @@
 }
 
 .social-wrapper {
+  border: 1px solid yellow;
+  height: 100px;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .social {
-  width: 20px;
-  height: 20px;
+  padding: 10px;
+  width: 70px;
+  height: 70px;
 }
