--- a/eli-gram/src/Components/PostsContainer/Posts.css
+++ b/eli-gram/src/Components/PostsContainer/Posts.css
@@ -29,3 +29,8 @@
     height: 100%;
     border-radius: 50%;
   }
+  .post{
+    padding: 10px;
+    border: 3px solid black;
+    margin-bottom: 100px;
+  }
